Fixed jumping content while slider script is initializing

--- a/web/css/source/_absolute.less
+++ b/web/css/source/_absolute.less
@@ -666,7 +666,12 @@ a:hover {
 // _____________________________________________
 
 .homepage-slider {
-    padding: 0 25px 25px;
+    img {
+        vertical-align: top;
+    }
+    .slick-dots {
+        bottom: 15px;
+    }
 }
 
 .toolbar .pages a.page,
